--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Italiana&family=Jost:wght@200;300;400;500;600;700;800&display=swap");
+* {
+  scroll-behavior: smooth;
+  transition: all ease-in-out 500ms;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Jost", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #eeeeee;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "IBM Plex Mono", monospace;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Italiana", serif;
+}
+a {
+  text-decoration: dotted !important;
+  color: black;
+}
+
+::selection {
+  background-color: #41644a;
+  color: #eeeeee;
+}
+
+/* 41644A 
+3C6255 */
