--- a/src/components/contacts.css
+++ b/src/components/contacts.css
@@ -15,7 +15,7 @@
   grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
   gap: 2rem;
 }
-.contact {
+.contact a {
   display: grid;
   gap: 0.7rem;
   place-items: center;
@@ -24,16 +24,16 @@
   border-radius: 1rem;
   cursor: pointer;
 }
-.contact:hover {
+.contact a:hover {
   background-color: #41644a;
   color: white !important;
   transform: translateY(-5px);
 }
-.contact:hover i,
-.contact:hover .scm {
+.contact a:hover i,
+.contact a:hover .scm {
   color: white;
 }
-.contact i {
+.contact a i {
   font-size: 30px;
   color: #41644a;
 }
@@ -49,24 +49,24 @@
   .scm {
     display: none;
   }
-  .contact {
+  .contact a {
     padding: 1rem;
     border-radius: 0.5rem;
   }
-  .contact:hover i {
+  .contact a:hover i {
     transform: scale(1.02);
   }
 }
 @media (max-width: 426px) {
-  .contact {
+  .contact a {
     padding: 0rem;
     border-radius: 0.5rem;
     box-shadow: none;
   }
-  .contact i {
+  .contact a i {
     font-size: 25px;
   }
-  .contact:hover {
+  .contact a:hover {
     background-color: transparent;
   }
 }
