--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -42,6 +42,7 @@ span {
 .tech-list {
   display: grid;
   grid-template-columns: 2fr 2fr 2fr 2fr;
+  place-items: center;
   gap: 1rem;
   height: 90px;
   overflow-y: auto;
@@ -64,22 +65,23 @@ span {
   height: 80px;
   width: 80px;
   border-radius: 10px;
-  /* background-color: #535c55; */
   display: grid;
-  /* padding: 0.4rem; */
   place-items: center;
   color: white;
   overflow: hidden;
-  /* box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
-}
-.tech img {
-  /* height: 60px; */
-  /* border-radius: 5px; */
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 @media (min-width: 770px) and (max-width: 1025px) {
+  .skill {
+    display: grid;
+    width: 100%;
+    grid-template-columns: none;
+  }
   .tech-list {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
     gap: 1rem;
   }
 }
@@ -103,12 +105,13 @@ span {
     gap: 1rem;
     height: auto;
     overflow-y: auto;
+    padding-left: none !important;
   }
   .tech {
     height: 70px;
     width: 70px;
     border-radius: 10px;
-    background-color: #41644a;
+
     display: grid;
     place-items: center;
     color: white;
@@ -121,15 +124,21 @@ span {
     gap: 1rem;
     height: auto;
     overflow-y: auto;
+    padding-left: none !important;
   }
 }
 @media (max-width: 376px) {
   .tech-list {
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
     gap: 1rem;
     height: auto;
     overflow-y: auto;
+    padding-left: none !important;
+  }
+  .tech {
+    height: 50px;
+    width: 50px;
   }
 }
 @media (max-width: 321px) {
@@ -137,10 +146,12 @@ span {
     display: grid;
     grid-template-columns: 2fr 2fr 2fr 2fr;
     gap: 0.4rem;
+    padding-left: none !important;
   }
   .tech {
     height: 50px;
     width: 50px;
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
   }
   .skill h2 {
     font-size: 20px;
