--- a/src/App.css
+++ b/src/App.css
@@ -13,22 +13,8 @@
   .main {
     background-image: none;
     background-color: #eeeeee;
-    background-image: url("./images/bg/fds.png");
+    background-image: url("./images/bg/mog.png");
     background-size: cover;
     /* padding-top: 2rem; */
-  }
-}
-@media (max-width: 426px) {
-  .main {
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    display: grid;
-    place-items: center;
-    min-height: 100vh;
-    /* background-color: red; */
-    background-image: url("./images/bg/fds.png");
-    background-repeat: no-repeat;
-    background-size: cover;
   }
 }
