--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -18,10 +18,11 @@ h1 {
 }
 
 code {
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.392);
   color: black;
   padding: 2px;
   font-size: 14px;
+  font-weight: 500;
   border-radius: 5px;
 }
 p {
