--- a/src/components/contacts.css
+++ b/src/components/contacts.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  z-index: 10;
+  position: relative;
 }
 .contacts h2 {
   font-size: 80px;
@@ -15,6 +17,7 @@
   grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
   gap: 2rem;
 }
+
 .contact a {
   display: grid;
   gap: 0.7rem;
@@ -23,6 +26,13 @@
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
   cursor: pointer;
+  /* From https://css.glass */
+  background: rgba(132, 156, 138, 0.38);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(14.9px);
+  -webkit-backdrop-filter: blur(14.9px);
+  border: 1px solid rgba(132, 156, 138, 0.43);
 }
 .contact a:hover {
   background-color: #41644a;
@@ -57,7 +67,7 @@
     transform: scale(1.02);
   }
 }
-@media (max-width: 426px) {
+@media (max-width: 428px) {
   .contact a {
     padding: 0rem;
     border-radius: 0.5rem;
