--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -1,6 +1,6 @@
 .top {
   position: relative;
-  z-index: 10;
+  /* z-index: 10; */
   display: flex;
   justify-content: center;
   align-items: center;
