--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  z-index: 10;
+  position: relative;
 }
 .projects h2 {
   font-size: 80px;
@@ -26,6 +28,13 @@
   gap: 1rem;
   padding: 5px;
   backdrop-filter: blur(14px);
+  /* From https://css.glass */
+  background: rgba(132, 156, 138, 0.38);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(14.9px);
+  -webkit-backdrop-filter: blur(14.9px);
+  border: 1px solid rgba(132, 156, 138, 0.43);
 }
 .project:hover {
   transform: skewY(1deg) scale(1.01);
@@ -94,7 +103,7 @@
     gap: none;
   }
 }
-@media (max-width: 426px) {
+@media (max-width: 500px) {
   /* .projects {
     margin-top: 35rem;
   } */
