--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,7 +3,8 @@
   justify-content: flex-end;
   align-items: center;
   /* background-color: #41644a; */
-  background: rgba(65, 100, 74, 0.25);
+  /* background: rgba(65, 100, 74, 0.25); */
+  background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   color: rgba(65, 100, 74, 0.9);
