--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -27,13 +27,18 @@
   /* border: 2px solid #41644a; */
   border-radius: 1rem;
   padding: 2rem;
-  /* From https://css.glass */
-  background: rgba(132, 156, 138, 0.38);
+  background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(14.9px);
   -webkit-backdrop-filter: blur(14.9px);
-  border: 1px solid rgba(132, 156, 138, 0.43);
+  /* From https://css.glass */
+  /* background: rgba(132, 156, 138, 0.38);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(14.9px);
+  -webkit-backdrop-filter: blur(14.9px);
+  border: 1px solid rgba(132, 156, 138, 0.43); */
 }
 .skill h2 {
   font-size: 40px;
